# webpage-to-json-llm-conversion

./: .gitignore  FINETUNING_README.md  LICENSE  README.md  check_compatibility.py  data_collection.py  finetune_model.py  html_fetcher.py  inference_with_finetuned.py  llm_connector.py  main.py  prepare_training_data.py  prompt.md  pyproject.toml  requirements.txt  requirements_finetune.txt  setup_and_run.py  training_data.jsonl
alternative_src/: main.py  prompt.md
output/: README.md
