[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpage-to-json-llm-conversion"
version = "1.0.0"
description = "A Python application that extracts content from webpages and analyzes it using a local LLM (llama.cpp)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Moore", email = "nicholasvmoore@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
finetune = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
    "peft>=0.4.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "packaging>=21.3",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.13.3"
]

[project.scripts]
webpage-to-json = "main:main"
html-to-json-finetune = "setup_and_run:main"

[project.urls]
"Homepage" = "https://github.com/nicholasvmoore/webpage-to-json-llm-conversion"
"Bug Tracker" = "https://github.com/nicholasvmoore/webpage-to-json-llm-conversion/issues"

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
